--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,22 @@
 {
   "manifest_version": 2,
-  "name": "My Chrome Extension",
+  "name": "Charms",
   "version": "1.0",
   "browser_action": {
     "default_popup": "popup.html"
   },
 
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "background": {
+    "js": ["background.js"]
+  }
 }
